src/modules/10-common/components/ResourceCenter/SubmitTicketModal/SubmitTicketModal.module.scss
/*
 * Copyright 2023 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

.submitTicketWizard {
  :global {
    .ModalDialog--body {
      padding: 0 !important;

      &::before,
      &::after {
        margin: 0 !important;
      }
    }

    .ModalDialog--bodyContent {
      padding: 0 !important;
      overflow: hidden;
    }
  }
}

.subtitle {
  margin-top: var(--spacing-large);
  margin-left: var(--spacing-large);
}

.icon {
  > svg {
    > path {
      fill: var(--white);
    }
  }
}

